# noff-skse

./: .clang-format  .gitignore  CMakeLists.txt  HOWITWORKS.md  README.md  build.bat  ghidra.bat  noff.json  vcpkg.json  zipup.bat
decomp/FUN_140655640/: FUN_140655640.c
decomp/FUN_140655640/referencess/: last_call.txt
decomp/FUN_140655640/referencess/Actor_Func150/: Actor_Func150.c
decomp/FUN_140655640/referencess/character_sub2/: character_sub2.c
decomp/SUB_140715330/: SUB_140715330.c
decomp/bteventsourceteshitevent_sendevent_/: bteventsourceteshitevent_sendevent.c
decomp/bteventsourceteshitevent_sendevent_/character-sub/: character-sub.c
decomp/bteventsourceteshitevent_sendevent_/kill_impl2/: kill_impl2.c
decomp/bteventsourceteshitevent_sendevent_/kill_impl2/references/: last_reference.txt
decomp/bteventsourceteshitevent_sendevent_/kill_impl2/references/Actor_HandleHealthDamage/: Actor_HandleHealthDamage.c
decomp/bteventsourceteshitevent_sendevent_/kill_impl2/references/Actor_Kill_Papyrus_impl/: Actor_Kill_Papyrus_impl.c
decomp/bteventsourceteshitevent_sendevent_/kill_impl2/references/Character_sub1/: Character_sub1.c
decomp/bteventsourceteshitevent_sendevent_/kill_impl2/references/FUN_140715ae0/: FUN_140715ae0.c
decomp/bteventsourceteshitevent_sendevent_/kill_impl2/references/FUN_140716350/: FUN_140716350.c
decomp/bteventsourceteshitevent_sendevent_/kill_impl2/references/FlameProjectile_sub/: FlameProjectile_sub.c
decomp/bteventsourceteshitevent_sendevent_/kill_impl2/references/GameFunc__handler_KillActor/: GameFunc__handler_KillActor.c
decomp/bteventsourceteshitevent_sendevent_/kill_impl2/references/LAB_140659710/: LAB_140659710.c
decomp/bteventsourceteshitevent_sendevent_/references/: Explosion_ApplyEffects.c  Projectile_HandleImpact.c  Projectile_OnActorHit.c  magictargetfunc.c  meleehit-framehandler.c  tesobjectrefr.c
decomp/combat_unk1/: combat_unkl1.c
gamelogicloop/: trace.md
scripts/: find_hooks.py  ghidra-script.py
scripts/skyrimse/: scan_ae_1170.py
src/: main.cpp  pch.h
(+2 files in other folders)
